[gd_scene load_steps=7 format=3 uid="uid://dt62bdfdp6vy4"]

[ext_resource type="Script" path="res://quiz_3.gd" id="1_62u1h"]
[ext_resource type="Texture2D" uid="uid://f0ufcmrqnuea" path="res://Backgrounds/Snowy_Background_-_Plain.png" id="2_vy34q"]
[ext_resource type="Texture2D" uid="uid://ba3sk7ry31825" path="res://Icons/snack/Hot_Cocoa.png" id="3_0smu2"]
[ext_resource type="Texture2D" uid="uid://dxug2wesu18wr" path="res://Icons/snack/Sweets.png" id="4_s1ppy"]
[ext_resource type="Texture2D" uid="uid://bweaw0f2uq5px" path="res://Icons/snack/Pie.png" id="5_fysu2"]
[ext_resource type="Texture2D" uid="uid://bd4djniprxbdd" path="res://Icons/snack/No_Thanks.png" id="6_1p5pp"]

[node name="Quiz3" type="Node2D"]
script = ExtResource("1_62u1h")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2360.0
offset_bottom = 1640.0
texture = ExtResource("2_vy34q")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "What are you munching on?"
horizontal_alignment = 1

[node name="AnswerHotCocoa" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 96.0
offset_right = 760.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 40
text = "Hot Cocoa"

[node name="AnswerPie" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 296.0
offset_right = 760.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 40
text = "Pie
"

[node name="AnswerNone" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 400.0
offset_right = 760.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 40
text = "None of These!"

[node name="AnswerCandy" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 192.0
offset_right = 760.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 40
text = " Candy"

[node name="HotCocoa" type="Sprite2D" parent="."]
position = Vector2(176, 192)
scale = Vector2(0.09, 0.09)
texture = ExtResource("3_0smu2")

[node name="HotCocoa2" type="Sprite2D" parent="."]
position = Vector2(960, 192)
scale = Vector2(0.09, 0.09)
texture = ExtResource("3_0smu2")

[node name="Sweets" type="Sprite2D" parent="."]
position = Vector2(184, 296)
scale = Vector2(0.06, 0.06)
texture = ExtResource("4_s1ppy")

[node name="Sweets2" type="Sprite2D" parent="."]
position = Vector2(944, 288)
scale = Vector2(0.06, 0.06)
texture = ExtResource("4_s1ppy")

[node name="Pie" type="Sprite2D" parent="."]
position = Vector2(184, 400)
scale = Vector2(0.09, 0.09)
texture = ExtResource("5_fysu2")

[node name="Pie2" type="Sprite2D" parent="."]
position = Vector2(968, 392)
scale = Vector2(0.09, 0.09)
texture = ExtResource("5_fysu2")

[node name="NoThanks" type="Sprite2D" parent="."]
position = Vector2(184, 504)
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_1p5pp")

[node name="NoThanks2" type="Sprite2D" parent="."]
position = Vector2(952, 504)
scale = Vector2(0.09, 0.09)
texture = ExtResource("6_1p5pp")

[connection signal="pressed" from="TextureRect/Label/AnswerHotCocoa" to="." method="_on_answer_hot_cocoa_pressed"]
[connection signal="pressed" from="TextureRect/Label/AnswerPie" to="." method="_on_answer_pie_pressed"]
[connection signal="pressed" from="TextureRect/Label/AnswerNone" to="." method="_on_answer_none_pressed"]
[connection signal="pressed" from="TextureRect/Label/AnswerCandy" to="." method="_on_answer_candy_pressed"]
